--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="hello">Hello, World!</h1>
+    <img id="mjpeg" src="image.jpg">
     <button onclick="changeText()">Click me!</button>
 
     <script src="script.js"></script>
