--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="hello">Hello, World!</h1>
-    <img id="mjpeg" src="image.jpg">
+    <img class="mjpeg" src="image.jpg">
     <br>
     <button onclick="changeText()">Click me!</button>
 
