--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img class="mjpeg" src="image.jpg">
     <br>
     <button onclick="changeText()">Click me!</button>
-
+    <div id="debug-console"></div>
     <script src="script.js"></script>
 </body>
 </html>
