--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <button onclick="changeText()">Click me!</button>
     <div id="debug-console"></div>
     <script src="script.js"></script>
+    <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;"></div>    
 </body>
 </html>
